@@ -2600,7 +2600,7 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "Frame File Options"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "Use extension .mrcs",IDC_USE_EXTENSION_MRCS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,67,14,82,10
+    CONTROL         "Use extension .mrcs",IDC_USE_EXTENSION_MRCS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,65,14,78,10
     CONTROL         "MRC file",IDC_SAVE_MRC,"Button",BS_AUTORADIOBUTTON | WS_GROUP,15,14,43,10
     CONTROL         "TIFF (LZW compression)",IDC_COMPRESSED_TIFF,"Button",BS_AUTORADIOBUTTON,15,25,97,10
     CONTROL         "TIFF (ZIP compression)",IDC_TIFF_ZIP_COMPRESS,"Button",BS_AUTORADIOBUTTON,15,36,93,10
@@ -3439,6 +3439,11 @@ BEGIN
 END
 
 IDD_NAVIGATOR AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_K2_SAVE_OPTIONS AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
