@@ -74,10 +74,13 @@
       are adjusted through the <A HREF="menu_process.htm#hid_process_setimagecriteria">
         Set Image Criteria command</A> in the Processing menu.</P>
     <P><b>Correct Drift</b></P>
-    <P>This checkbox is present for a OneView camera and turns on the real-time drift 
+    <P>This checkbox is present for a OneView or Rio camera and turns on the real-time drift 
       correction by that camera.&nbsp; Note that if this option is on and the image 
       does not have enough features for alignment, the intensity of the image may be 
       much less than expected.</P>
+      <P><strong>Diffraction mode</strong></P>
+      <P>This checkbox is present for a OneView or Rio camera and will make images be 
+          acquired in the camera's Diffraction mode instead of Imaging mode.</P>
     <P><B>Binning</B></P>
     <P>These radio buttons present the options for binning an image directly as it is 
       read out of the CCD camera.</P>
